create judge detail and hearing scheduling and user viewing